--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,9 +1,8 @@
 :root {
 	--font-body: 'Inter', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-theme-1: #ff3e00;
-	--color-theme-2: #4075a6;
-	--color-text: rgba(0, 0, 0, 0.7);
+	--color-theme-1: #55acee;
+	--color-theme-2: #f4900c;
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
@@ -28,6 +27,7 @@ p {
 a {
 	color: var(--color-theme-1);
 	text-decoration: none;
+	font-weight: 500;
 }
 
 a:hover {
@@ -66,10 +66,37 @@ input,
 button {
 	font-size: inherit;
 	font-family: inherit;
+	outline: none;
 }
 
-button:focus:not(:focus-visible) {
-	outline: none;
+input {
+	border: 2px solid var(--color-theme-1);
+	border-radius: 0.25rem;
+	padding: 0.5rem;
+	margin: 2px;
+	color: var(--color-theme-1);
+	transition: all 0.2s ease-in-out;
+}
+
+input:invalid {
+	border-color: var(--color-theme-2);
+	color: var(--color-theme-2);
+}
+
+button {
+	color: var(--color-theme-1);
+	border-radius: 0.25rem;
+	border: 2px solid var(--color-theme-1);
+	padding: 0.5rem;
+	margin: 2px;
+	background-color: #fff;
+	cursor: pointer;
+	transition: all 0.2s ease-in-out;
+}
+
+button:hover {
+	background-color: var(--color-theme-1);
+	color: #fff;
 }
 
 @media (min-width: 720px) {
